ags (0.7.122.22)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed LIBADD nad LDADD of GSequencer system check automake file

ags (0.7.122.21)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing length of pattern

ags (0.7.122.20)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed automation to use previous value if range doesn't match
	* added functional test to check editor workflow

ags (0.7.122.19)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsEffectSeparator for AgsLine and AgsEffectLine
	* removed gtk separator in AgsLine and AgsEffectLine
	* disabled AgsDestroyWorker

ags (0.7.122.18)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed dead-lock as removing line member
	* improved plugin browser to reset plugin type
	* improved the speed of functional tests
	* added functional test to check line member sanity

ags (0.7.122.17)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsClearAudioSignal task
	* fixed ags_synth_update() it didn't clear the buffers correctly
	* added functional test to check link sanity

ags (0.7.122.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed memory corruption of AgsFFPlayer destruction
	* fixed some AgsConnectable::disconnect() of machines
	* fixed potential infinite loop in ags_machine_resize_audio_channels()
	* added functional test add and destroy machine
	* added functional tests resize pads and audio channels

ags (0.7.122.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing connect of AgsOscillator
	* fixed noise creation in AgsSynth
	* fixed SIGSEGV as adding plugin to AgsLine

ags (0.7.122.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented notebook resize in automation editor
	* fixed NULL pointer dereference in ags_matrix.c
	* fixed resize pad to distinguish between input and output
